--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "aevi-digital-receipts-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "heroku-postbuild": "npm run build",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
